[feature] Transfer from bukkit to paper & add player to player teleport system

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,3 +12,7 @@ commands:
   unloc:
     description: Disable AllInOne plugin
     usage: /<command>
+
+  "allinone:callback":
+    description: Callback function
+    usage: /<command> <UUID>
